<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_text">Add new notes</string>
    <string name="text_date_of_create">Дата создания:</string>
    <string name="text_content">Содержимое:</string>
    <string name="fragment_navigation">My Notes</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="text_in_check_as_completed">Выполнено</string>
    <string name="menu_search">Search</string>
    <string name="menu_add">Add …</string>
    <string name="menu_clear">Clear</string>
    <string name="popup_edit">Edit</string>
    <string name="popup_delete">Delete this</string>
    <string name="drawer_add">Add new Notes</string>
    <string name="drawer_delete">Delete Notes</string>
    <string name="drawer_edit">Edit this Notes</string>
    <string name="drawer_clear">Clear all</string>
    <string name="drawer_about">О программе</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="popup_clear">Clear all</string>
    <string name="popup_add">Add new</string>
    <string name="warning">Warning!</string>
    <string name="no">Да нет, наверное</string>
    <string name="yes">Ну, да</string>
    <string name="add_new">Add new note</string>
    <string name="edit_note">Edit note</string>
    <string name="menu_refresh">Refresh</string>
</resources>