<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drawer_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        android:title="@string/popup_add" />

    <item
        android:id="@+id/drawer_delete"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="20"
        android:title="@string/popup_delete" />

    <item
        android:id="@+id/drawer_rename"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="30"
        android:title="@string/popup_rename" />

    <item
        android:id="@+id/drawer_clear"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:orderInCategory="40"
        android:title="@string/popup_clear" />

    <item
        android:id="@+id/drawer_about"
        android:orderInCategory="100"
        android:title="@string/drawer_about" />

</menu>